added ci/cd start

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,19 @@ jobs:
         run: npm install -g pnpm
 
       - name: Install dependencies
-        run: pnpm install
-        working-directory: ./frontend
+        run: |
+          cd frontend 
+          echo "Installing dependencies"
+          pnpm install 
 
-      - name: Run tests
-        run: pnpm test
-        working-directory: ./frontend
+      - name: Run lint test 
+        run: |
+          cd frontend
+          echo "Running lint test"
+          pnpm run lint
 
+      - name: Run build test
+        run: |
+          cd frontend 
+          echo "Running build test"
+          pnpm run test-build
