--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-build": "next build && next start"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
