auth init - no db

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -6,3 +6,12 @@ AUTH_GITHUB_SECRET=
 
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
+
+POSTGRES_URL=
+POSTGRES_URL_NO_SSL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+
+APP_ENV=local # local, development, production, test
