--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,32 +7,48 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test-build": "next build && next start"
+    "test-build": "next build && next start",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.2.0",
+    "@next/env": "^14.2.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/postgres": "^0.8.0",
     "@vercel/speed-insights": "^1.0.11",
+    "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
-    "next-auth": "5.0.0-beta.18",
+    "next-auth": "5.0.0-beta.19",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^34.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.14.1",
+    "@types/pg": "^8.11.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "drizzle-kit": "^0.22.2",
+    "drizzle-orm": "^0.31.1",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
+    "postcss": "^8.4.38",
+    "prettier": "3.3.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
