updated settings and dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "workbench.colorCustomizations": {
       "activityBar.background": "#db00007c"
     },
-    "explorer.sortOrder": "filesFirst",
+    // "explorer.sortOrder": "filesFirst",
   }
