--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,19 @@
     "start": "next start",
     "lint": "next lint",
     "test-build": "next build && next start",
-    "prepare": "husky"
+    "prepare": "husky",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/env": "^14.2.3",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.8.0",
     "@vercel/speed-insights": "^1.0.11",
@@ -22,7 +28,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "eslint-plugin-drizzle": "^0.2.3",
     "lucide-react": "^0.379.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.19",
     "next-themes": "^0.3.0",
@@ -48,7 +56,9 @@
     "lint-staged": "^15.2.5",
     "postcss": "^8.4.38",
     "prettier": "3.3.0",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
