--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "test-build": "next build && next start",
     "prepare": "husky"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -27,6 +30,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "eslint-plugin-drizzle": "^0.2.3",
+    "googleapis": "^140.0.0",
     "lucide-react": "^0.379.0",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
