--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,11 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/env": "^14.2.3",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
