--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.8.0",
     "@vercel/speed-insights": "^1.0.11",
+    "antd": "^5.20.1",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
