--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "googleapis": "^140.0.1",
     "lucide-react": "^0.379.0",
