--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "sharp": "^0.33.5",
+    "string-similarity-js": "^2.1.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vercel": "^34.4.0",
