--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "seed-words": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seedWords.ts"
   },
   "dependencies": {
     "@google-cloud/speech": "^6.7.0",
